# data-core

./: .dockerignore  .env.example  BACKUP_AND_RESTORE.md  CLOUD_MIGRATION_PLAN.md  DATA_CORE_COLLECTION_READINESS.md  DEPLOY_AND_ROLLBACK.md  Dockerfile  FRONTEND_STABILIZATION_PLAN.md  GO_NO_GO_CHECKLIST.md  INCIDENT_RESPONSE.md  JOBS_COLLECTION_FOUNDATION.md  LOCAL_MINIMAL_SETUP.md  PLATFORM_OPERATIONAL_AUDIT.md  README.md  REAL_ESTATE_COLLECTION_READINESS.md  SERVER_INVENTORY.md  SERVER_OPERATIONS_RUNBOOK.md  docker-compose.local.yml  docker-compose.telegram-first.yml  docker-compose.yml  launch_api.py  launch_scheduler.py  launch_worker.py  observation_report.py  prometheus.yml  pyproject.toml  requirements.txt  runtime-readiness.md
ai/: CONTEXT.md  DOC_SYNC_RULES.md
alembic/: env.py
alertmanager/: alertmanager.telegram-first.yml  alertmanager.yml  poupi_telegram.tmpl
api/: auth.py  burnin_metrics.py  live_metrics.py  live_metrics_updater.py  metrics.py  poupi_baby_routes.py  rate_limit.py  routes.py  runtime_metrics.py  schemas.py
app/: main.py  pipeline_api.py  system_status.py
cache/: __init__.py  client.py
collectors/: registry.py
core/: config.py
data/: behavior_audit_log.jsonl  capital_preservation_log.jsonl  catastrophic_simulation_log.jsonl  cold_start_validation_log.jsonl  collector_reliability_log.jsonl  dashboard_validation_log.jsonl  deployment_validation_log.jsonl  execution_simulation_log.jsonl  incident_noise_log.jsonl  live_readiness_log.jsonl  metrics_integrity_log.jsonl  operational_drift_log.jsonl  production_readiness_log.jsonl  (+15 more)
(+401 files in other folders)
