[project]
name = "data-core"
version = "0.1.0"
description = "Modular backend for data collectors, scheduling, storage, logs, retries, and REST APIs."
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.3",
    "apscheduler==3.10.4",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "ccxt>=4.3.0",
    "fastapi==0.115.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "playwright==1.47.0",
    "psycopg[binary]==3.2.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv>=1.0.0",
    "python-json-logger==2.0.7",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
